collection 예제 수정 java 17 -> java 11